5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4193/executions/1582_1559.log
== TEST (2019-03-26 12:46:38) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(.upper)
-- ERROR:
File "XXXX", line 2
    print(.upper)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:47:28) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.".upper()
print(frase)
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 12:47:34) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.".upper()
print(frase)
-- EXECUTION TIME:
0.218127
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:34:45) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.".upper()
print(frase)
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 13:34:51) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.".upper()
print(frase)
-- EXECUTION TIME:
0.122178
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
